# gripper-module

./: .gitignore  .gitignore~  CMakeLists.txt  CommunicationChannel.cpp  Module.cpp  README.md  README.md~  compile_commands.json  main.cpp  main_test.cpp  mobility_module
libs/AIO/: CommunicationChannel.cpp  CommunicationEvents.cpp  Module.cpp  ModuleInfo.cpp  Services.cpp  gripper-module.cpp
libs/MobilityModule/: BatterySensorService.cpp  BlinkService.cpp  CalibratingSensorsService.cpp  MobilityModule.cpp  MobilityModuleInfo.cpp  MoveService.cpp  TellService.cpp  main.cpp
libs/zumo-shield/: CMakeLists.txt  main.cpp
libs/zumo-shield/QTRSensors/: QTRSensors.cpp  QTRSensors.h
libs/zumo-shield/ZumoMotors/: ZumoMotors.cpp  ZumoMotors.h
libs/zumo-shield/ZumoReflectanceSensorArray/: ZumoReflectanceSensorArray.h
libs/zumo-shield/lsm303/: LSM303.cpp  LSM303.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
